Decided to not use service to avoid getting stuck trying to create promises for api data. Instead, called api factory from controller.  Also, adjusted html to create one parent directive and two children directive, then, in both children directive, required parent directive and set two functions to pull in all three directives to share the same controller.

--- a/app/assets/app.css
+++ b/app/assets/app.css
@@ -16,7 +16,15 @@ md-sidenav  md-list {
   padding: 0px 0px 8px 0px;
 }
 
+
 #teamList {
   box-sizing: border-box;
   height: 100%;
+}
+
+#nl {
+  background-color: orange;
+}
+#al {
+  background-color: lightgreen;
 }
